# af0fr

./: .gitignore  LICENSE  README.md  angular.json  package-lock.json  package.json
backend/: .env.example  main.py  pyproject.toml
backend/app/: config.py  db.py  main.py  schema.py
backend/app/controllers/: azimuth.py  common.py  cw.py  net_control.py
backend/app/models/: azimuth.py  cw.py  net_control.py
backend/app/routes/: azimuth.py  cw.py  net_control.py  system.py
src/: index.html  main.ts  styles.css
src/app/: app.component.ts  app.routes.ts
src/app/components/site-footer/: site-footer.component.html
src/app/core/layout/site-footer/: site-footer.component.ts
src/app/core/layout/site-header/: site-header.component.html  site-header.component.ts
src/app/pages/af0fr/: af0fr.page.html  af0fr.page.ts
src/app/pages/af0fr/echo_link/: echolink.component.html
src/app/pages/af0fr/ham-bands/: ham-bands.page.html  ham-bands.page.ts
src/app/pages/af0fr/keyer/: keyer.component.html
src/app/pages/af0fr_logbook/: af0fr_logbook.page.html  af0fr_logbook.page.ts
src/app/pages/af0fr_net_control/: af0fr_net_control.page.html  af0fr_net_control.page.ts  roster-table.component.ts
src/app/pages/azimuth-map/: af0fr_azimuth_map.page.html  af0fr_azimuth_map.page.ts
src/app/pages/cw/: af0fr_cw_qso.page.html  af0fr_cw_qso.page.ts  cw-protocol.ts
src/app/pages/ops/: ops-conditions.component.html  ops-conditions.component.ts  ops-dashboard.page.html  ops-dashboard.page.ts
src/assets/contact/: AF0FR.vcf
src/environments/: environment.prod.ts  environment.ts
(+38 files in other folders)
